<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView2" />
    <Button
        android:id="@+id/btnSetTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="btnSetTime"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/textView3" />
        <Button
            android:id="@+id/btnGPS"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/btnGPS"/>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnSetPlace1"
            style="?android:borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btnSetPlace1" />
    </FrameLayout>
    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView4" />
    <Button
        android:id="@+id/btnSetPlace2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSetPlace2"
        style="?android:borderlessButtonStyle"/>
    <Button
        android:id="@+id/btnSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSearch"/>
</LinearLayout>