<?xml version="1.0" encoding="UTF-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textClock1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/textClock1"/>
        <TextView
            android:id="@+id/textSup1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="2/4"/>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/textsp1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/textsp1"/>
            <TextView
                android:id="@+id/textep1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/textep1"/>
        </LinearLayout>
        <Button
            android:id="@+id/btnList1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="?android:borderlessButtonStyle"/>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textClock2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/textClock2"/>
        <TextView
            android:id="@+id/textSup2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="2/4"/>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/textsp2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/textsp2"/>
            <TextView
                android:id="@+id/textep2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/textep2"/>
        </LinearLayout>
        <Button
            android:id="@+id/btnList2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="?android:borderlessButtonStyle"/>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textClock3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/textClock3"/>
        <TextView
            android:id="@+id/textSup3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="2/4"/>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/textsp3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/textsp3"/>
            <TextView
                android:id="@+id/textep3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/textep3"/>
        </LinearLayout>
        <Button
            android:id="@+id/btnList3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="?android:borderlessButtonStyle"/>
    </FrameLayout>
</LinearLayout>