<?xml version="1.0" encoding="utf-8" ?>
<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/viewFlipper1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView1" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="aaa@example.com"/>
        <Button
            android:id="@+id/btnSendMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strBtnSendMail" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="invisible"
            android:id="@+id/linearlayout1">
            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
            <Button
                android:id="@+id/btnMailCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strBtnMailCheck" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/editTextTextPersonName2" />
        <Button
            android:id="@+id/btnRegis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strBtnRegis" />
    </LinearLayout>
</ViewFlipper>